--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
      <h1>Header</h1>
 Hello there, awesome person!
+     <img src="https://avatars3.githubusercontent.com/u/20544029?v=4">
   </body>
 </html>
