--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
      <h1>Header</h1>
 Hello there, awesome person!
      <img src="https://avatars3.githubusercontent.com/u/20544029?v=4">
+     <ol>
+        <li>apples</li>
+        <li>bananas</li>
+        <li>oranges</li>
   </body>
 </html>
