update-list-link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 Hello there, awesome person!
      <img src="https://avatars3.githubusercontent.com/u/20544029?v=4">
      <ol>
+        <a href="https://github.com">This is a link to GitHub!</a>
         <li>apples</li>
         <li>bananas</li>
         <li>oranges</li>
